k8s/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: monolith
  name: monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monolith
    spec:
      securityContext:
         runAsUser: 1000300
      containers:
      - image: javieraviles/monolith
        name: monolith
        ports:
          - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: monolith
  labels:
    app: monolith
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: monolith
  type: LoadBalancer
